# latent-energy

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
docs/: data-engineering.md  training.md
docs/energy_atlas/: index.html  interactive_comparison_dashboard.html
docs/visualizations/: gold_metrics.json  silver_metrics.json
src/grid_energy/: cli.py  train.py
src/grid_energy/core/: energy.py  models.py  solver.py
src/grid_energy/data/: ingestion.py  loader.py  processor.py  synthesizer.py
src/grid_energy/data/visualization/: gold_visualizer.py
src/grid_energy/schemas/: nonogram.py
src/grid_energy/utils/: config.py
src/grid_energy/visualization/: energy_visualizer.py
tests/: test_cli.py  test_train.py
tests/core/: test_energy.py  test_models.py  test_solver.py
tests/data/: test_ingestion.py  test_loader.py  test_processor.py  test_synthesizer.py
tests/data/visualization/: test_gold_visualizer.py
tests/visualization/: test_energy_visualizer.py
