[project]
name = "grid-energy"
version = "0.1.0"
description = "Kinetic Resolution for Logic Systems using Energy-Based Models"
authors = [{name = "Hirako San", email = "hirako2000@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14" 
dependencies = [
    "dvc>=3.0.0",
    "huggingface-hub>=0.20.0",
    "matplotlib>=3.8.0",
    "msgspec>=0.18.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "plotly>=6.5.2",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.0",
    "torch>=2.2.0",
    "torchebm>=0.5.1",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "ipython>=8.20.0",
    "pre-commit>=3.6.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-ruff>=0.5",
    "ruff>=0.2.0",
]

[project.scripts]
grid-energy = "grid_energy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_energy"]

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
addopts = "-ra -v --ruff --cov=src/ --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning:torch_geometric.*",
    "ignore::DeprecationWarning:torch.jit.*",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "I",   # isort
    "E",   # Pycodestyle Errors
    "W",   # Pycodestyle Warnings
    "B",   # flake8-bugbear
    "S",   # Bandit (Security)
    "PL",  # Pylint
    "C4",  # Comprehensions
    "C90", # McCabe complexity
    "TID", # Tidy imports
]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]